--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-native-transparent-video": "^0.0.1-security",
+    "react-player": "^2.16.0",
     "simplex-noise": "^4.0.2",
     "tailwind-merge": "^2.4.0"
   },
