--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-native-transparent-video": "^0.0.1-security",
     "react-player": "^2.16.0",
+    "react-responsive": "^10.0.0",
     "simplex-noise": "^4.0.2",
     "tailwind-merge": "^2.4.0"
   },
