--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-native-transparent-video": "^0.0.1-security",
     "react-player": "^2.16.0",
     "react-responsive": "^10.0.0",
