--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "prettier": "prettier . --write"
   },
   "dependencies": {
+    "@coreui/icons": "^3.0.1",
+    "@coreui/icons-react": "^2.3.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.2",
     "mini-svg-data-uri": "^1.4.4",
